--- a/KOMiT/KOMiT.Client/Components/CreateProject.razor
+++ b/KOMiT/KOMiT.Client/Components/CreateProject.razor
@@ -1,85 +1,88 @@
 ﻿@using KOMiT.Core.Model
+@using KOMiT.Core.Model.Enum;
 @inject HttpClient http
 @inject NavigationManager navManger
 @inject ConfirmationService confirmationService
 
-<div class="row">
-    <div class="col-md-4">
-        <EditForm class="container" Model="project">
-            <DataAnnotationsValidator />
-            <ValidationSummary />
 
-            <div class="form-group">
-                <label>Projektnavn</label>
-                <input @bind-value="project.Name" class="form-control" />
-                <span asp-validation-for="project.Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label>Beskrivelse</label>
-                <input @bind-value="project.Description" class="form-control" />
-                <span asp-validation-for="project.Beskrivelse" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label>Projekttype</label>
-                <select @bind="project.ProjectType" class="form-control" style="width: 150px;">
-                    <option value="Drift">Drift</option>
-                    <option value="Udvikling">Udvikling</option>
-                    <option value="Integration">Integration</option>
-                </select>
-                <span asp-validation-for="project.Status" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label>Prioritet</label>
-                <select @bind="project.Priority" class="form-control" style="width: 150px;">
-                    <option value="Høj">Høj</option>
-                    <option value="Mellem">Mellem</option>
-                    <option value="Lav">Lav</option>
-                </select>
-                <span asp-validation-for="project.Prioritet" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label>Status</label>
-                <select @bind="project.Status" class="form-control" style="width: 150px;">
-                    <option value="Aktiv">Aktiv</option>
-                    <option value="Inaktiv">Inaktiv</option>
-                    <option value="Færdiggjort">Færdiggjort</option>
-                </select>
-                <span asp-validation-for="project.Status" class="text-danger"></span>
-            </div>
+<EditForm class="container" Model="project">
+    <DataAnnotationsValidator />
+    <ValidationSummary />
 
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label>Startdato</label>
-                        <div style="display: flex; gap: 10px;">
-                            <InputDate style="width: 150px;" @bind-Value="project.EstimatedStartDate" class="form-control" />
-                        </div>
-                        <span asp-validation-for="project.Startdato" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label>Slutdato</label>
-                        <div style="display: flex; gap: 10px;">
-                            <InputDate style="width: 150px;" @bind-Value="project.EstimatedEndDate" class="form-control" />
-                        </div>
-                        <span asp-validation-for="project.slutdato" class="text-danger"></span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="form-group" style="display: flex; justify-content: flex-end; margin-top: 10px;">
-                        <button class="btn btn-primary" style="width: 100px;" @onclick="Create">Opret</button>
-                        <Button Color="ButtonColor.Secondary" style="width: 100px; margin-left: 10px;" @onclick="OnClick">Luk</Button>
-                    </div>
-                </div>
-            </div>
-
-        </EditForm>
+    <div class="form-group" style="margin-bottom:10px">
+        <label>Projektnavn</label>
+        <input @bind-value="project.Name" class="form-control" />
+        <span asp-validation-for="project.Name" class="text-danger"></span>
     </div>
-</div>
+    <div class="form-group" style="margin-bottom:10px">
+        <label>Beskrivelse</label>
+        <InputTextArea @bind-Value="project.Description" class="form-control" />
+    </div>
+    <div class="form-group" style="margin-bottom:10px">
+        <label>Projekttype</label>
+        <InputSelect @bind-Value="project.ProjectType">
+            @foreach (var projectType in Enum.GetValues(typeof(ProjectType)))
+            {
+                <option value="@projectType">
+                    @projectType
+                </option>
+            }
+        </InputSelect>
+        <span asp-validation-for="project.Status" class="text-danger"></span>
+    </div>
+    <div class="form-group" style="margin-bottom:10px">
+        <label>Prioritet</label>
+         <InputSelect @bind-Value="project.Priority">
+        @foreach (var priority in Enum.GetValues(typeof(Priority)))
+        {
+        <option value="@priority">
+                @priority
+        </option>
+        }
+        </InputSelect>
+    <span asp-validation-for="project.Prioritet" class="text-danger"></span>
+    </div>
+    <div class="form-group" style="margin-bottom:10px">
+        <label>Status</label>
+         <InputSelect @bind-Value="project.Status">
+        @foreach (var status in Enum.GetValues(typeof(Status)))
+        {
+        <option value="@status">
+                @status
+        </option>
+        }
+        </InputSelect>
+    <span asp-validation-for="project.Status" class="text-danger"></span>
+    </div>
+
+    <div class="row">
+        <div class="col-md-4">
+            <div class="form-group">
+                <label>Startdato</label>
+                <div >
+                    <InputDate style="width: 150px;" @bind-Value="project.EstimatedStartDate" class="form-control" />
+                </div>
+                <span asp-validation-for="project.Startdato" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="form-group">
+                <label>Slutdato</label>
+                <div>
+                    <InputDate style="width: 150px;" @bind-Value="project.EstimatedEndDate" class="form-control" />
+                </div>
+                <span asp-validation-for="project.slutdato" class="text-danger"></span>
+            </div>
+        </div>
+    </div>
+
+    <div style="margin-top:10px;">
+        <Button Color="ButtonColor.Primary" @onclick="Create"> Opret</Button>
+        <Button Color="ButtonColor.Secondary" @onclick="OnClick">Luk</Button>
+    </div>
+
+</EditForm>
+
 
 @if (!string.IsNullOrEmpty(confirmationService.SuccessMessage))
 {
@@ -112,7 +115,7 @@
         if (response.IsSuccessStatusCode)
         {
             confirmationService.SetSuccessMessage("Projektet er oprettet succesfuldt!");
-            navManger.NavigateTo("/");
+            navManger.NavigateTo("/", true);
         }
         else
         {
