--- a/KOMiT/KOMiT.Client/Pages/EmployeeIndex.razor
+++ b/KOMiT/KOMiT.Client/Pages/EmployeeIndex.razor
@@ -56,7 +56,7 @@ else
 
 @code {
 
-    private ICollection<Employee>? Employees { get; set; }
+    public ICollection<Employee>? Employees { get; set; }
     private Modal modal;
 
     protected override async Task OnInitializedAsync()
