--- a/KOMiT/KOMiT.Client/Pages/Index.razor
+++ b/KOMiT/KOMiT.Client/Pages/Index.razor
@@ -131,7 +131,7 @@ else
 
 
     @code {
-    private ICollection<Project>? Projects { get; set; }
+    public ICollection<Project>? Projects { get; set; }
     private Modal modal;
     private Modal modalAddProject;
     private Modal modalFinishProject;
