--- a/KOMiT/KOMiT.Client/Components/CreateStandardPhase.razor
+++ b/KOMiT/KOMiT.Client/Components/CreateStandardPhase.razor
@@ -5,18 +5,18 @@
 
 
 
-<EditForm class="container" Model="standardPhase" OnValidSubmit="@Create">
+<EditForm class="container" Model="StandardPhase" OnValidSubmit="@Create">
     <DataAnnotationsValidator />
     <ValidationSummary />
 
     <div class="form-group">
         <label>Navn</label>
-        <input @bind-value="standardPhase.Name" class="form-control" />
+        <input @bind-value="StandardPhase.Name" class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label>Beskrivelse</label>
-        <input @bind-value="standardPhase.Description" class="form-control" />
+        <input @bind-value="StandardPhase.Description" class="form-control" />
         <span asp-validation-for="Beskrivelse" class="text-danger"></span>
     </div>
     <div style="margin-top:10px;">
@@ -42,29 +42,23 @@
 }
 
 @code {
-    private StandardPhase standardPhase = new StandardPhase();
+    public StandardPhase StandardPhase = new StandardPhase();
 
     [Parameter]
     public EventCallback<MouseEventArgs> OnClick { get; set; }
 
     private async Task Create()
     {
-        var response = await http.PostAsJsonAsync("https://localhost:7282/api/standardphase/CreatePhase", standardPhase);
+        var response = await http.PostAsJsonAsync("https://localhost:7282/api/standardphase/CreatePhase", StandardPhase);
         if (response.IsSuccessStatusCode)
         {
             confirmationService.SetSuccessMessage("Standardfase er oprettet succesfuldt!");
-
-            navManger.NavigateTo("/");
-            await Task.Delay(7000);
             navManger.NavigateTo("/", true);
-
-
         }
         else
         {
             confirmationService.SetWarningMessage("Fejl ved oprettelse af standardfase. Prøv igen.");
         }
     }
-
 }
 
