--- a/KOMiT/KOMiT.Client/Components/FinishProject.razor
+++ b/KOMiT/KOMiT.Client/Components/FinishProject.razor
@@ -28,10 +28,12 @@
     public EventCallback<MouseEventArgs> OnClick { get; set; }
 
     [Parameter]
-    public Project? Project { get; set; }
+    public EventCallback OnUpdate { get; set; }
 
     [Parameter]
-    public EventCallback OnUpdate { get; set; }
+    public Project? Project { get; set; }
+
+
 
     protected override async Task OnInitializedAsync()
     {
@@ -47,10 +49,10 @@
     {
 
         var response = await http.PostAsJsonAsync("https://localhost:7282/api/Project/FinishProject", Project);
-        await OnUpdate.InvokeAsync();
         if (response.IsSuccessStatusCode)
         {
-            confirmationService.SetSuccessMessage("Projektet er afsluttet!");
+            //confirmationService.SetSuccessMessage("Projektet er afsluttet!");
+            await OnUpdate.InvokeAsync();
             
         }
         else
