--- a/KOMiT/KOMiT.Client/Components/AddProjectMemberToCurrentPhase.razor
+++ b/KOMiT/KOMiT.Client/Components/AddProjectMemberToCurrentPhase.razor
@@ -51,9 +51,13 @@
     [Parameter]
     public EventCallback<MouseEventArgs> OnClick { get; set; }
 
+    [Parameter]
+    public EventCallback OnUpdate { get; set; }
+
     private List<Employee>? _employees;
 
     private ProjectMember _projectMember = new ProjectMember();
+
 
     private int selectedEmployeeId;
 
@@ -68,7 +72,8 @@
 
         if (response.IsSuccessStatusCode)
         {
-            navigationManager.NavigateTo($"/phasedetails/{ID}", true);
+            //navigationManager.NavigateTo($"/phasedetails/{ID}", true);
+            await OnUpdate.InvokeAsync();
         }
     }
 }
