--- a/KOMiT/KOMiT.Client/Components/FinishCurrentSubGoal.razor
+++ b/KOMiT/KOMiT.Client/Components/FinishCurrentSubGoal.razor
@@ -29,6 +29,9 @@
     public EventCallback<MouseEventArgs> OnClick { get; set; }
 
     [Parameter]
+    public EventCallback OnUpdate { get; set; }
+
+    [Parameter]
     public CurrentSubGoal? CurrentSubGoal { get; set; }
 
 
@@ -50,7 +53,8 @@
             var response = await http.PutAsJsonAsync("https://localhost:7282/api/CurrentSubGoal/FinishCurrentSubGoal", CurrentSubGoal);
             if (response.IsSuccessStatusCode)
             {
-                navigationManager.NavigateTo($"/phasedetails/{ID}", true);
+                //navigationManager.NavigateTo($"/phasedetails/{ID}", true);
+                await OnUpdate.InvokeAsync();
             }        
         }
         catch (HttpRequestException ex)
